# Visual_Inspection_Agent

./: CMakeLists.txt  config.json  resource.qrc
src/ai_infer/: ai_common.h  ai_engine.cpp  ai_engine.h  ai_utils.h  infer_backend.h  openvino_infer.cpp  openvino_infer.h  postprocess.cpp  postprocess.h  yolo.cpp  yolo.h
src/algorithm/: algorithm_factory.cpp  algorithm_factory.h  algorithm_interface.h  algorithm_registry.cpp  draw_roi_algorithm.cpp  draw_roi_algorithm.h  idetector.h  terminal_detector.cpp  terminal_detector.h  yolo_terminal_algorithm.cpp  yolo_terminal_algorithm.h
src/app/: app_context.cpp  app_context.h  common.h  config_manager.cpp  config_manager.h  main.cpp
src/camera/: camera_interface.h  camera_manager.cpp  camera_manager.h  hik_camera.cpp  hik_camera.h
src/communication/: comm_interface.h  comm_manager.cpp  comm_manager.h  light_serial_controller.cpp  light_serial_controller.h  modbus_client_base.cpp  modbus_client_base.h  modbus_rtu_client.cpp  modbus_rtu_client.h  modbus_tcp_client.cpp  modbus_tcp_client.h
src/storage/: database_manager.cpp  database_manager.h  image_storage.cpp  image_storage.h
src/style/: style.qss
src/ui/: camera_param_dialog.cpp  camera_param_dialog.h  camera_param_dialog.ui  camera_view_widget.cpp  camera_view_widget.h  camera_view_widget.ui  ioparam_dialog.cpp  ioparam_dialog.h  ioparam_dialog.ui  main_window.cpp  main_window.h  main_window.ui  operation_view_widget.cpp  operation_view_widget.h  operation_view_widget.ui  param_page.cpp  param_page.h  param_page.ui  terminal_settings_dialog.h  terminal_settings_dialog.ui  toolbox_widget.cpp  toolbox_widget.h  toolbox_widget.ui  workflow_config_dialog.cpp  workflow_config_dialog.h  workflow_row_widget.cpp  workflow_row_widget.h  workflow_row_widget.ui  workflow_view_widget.cpp  workflow_view_widget.h  workflow_view_widget.ui
src/workflow/: inspection_pipeline.cpp  inspection_pipeline.h  workflow_manager.cpp  workflow_manager.h
src/workflow/nodes/: algorithm_node.cpp  algorithm_node.h  capture_node.cpp  capture_node.h  node_base.h  result_node.cpp  result_node.h
